MB-8380 Update the vbucket flush stats after commit

Otherwise, the disk drain stats keep incremented even if there
are some errors that cause dirty items to be requeued.

Change-Id: I4db7e54b898e9881298d53019ac3999df6ef109d
Reviewed-on: http://review.couchbase.org/26632
Reviewed-by: Jin Lim <jin@couchbase.com>
Tested-by: Chiyoung Seo <chiyoung.seo@gmail.com>